--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <i class="fa-brands fa-linkedin"></i> Linkedin
                         </a>
                     </div>
-                    <a href="ImagesPortfolio/DIARRA KONTE (3).pdf" class="CV bouton-cv" target="_blank">Télécharger CV</a>
+                    <a href="ImagesPortfolio/CVDK.pdf" class="CV bouton-cv" target="_blank">Télécharger CV</a>
                 </div>
             </div>
         </div>
