--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     <p><strong>3. Normalisation des Données :</strong> Compréhension des principes de normalisation pour éviter la redondance et garantir l'intégrité des données.</p>
                     <p><strong>4. Utilisation de Tables Temporaires :</strong> Compétence dans la création et la gestion de tables temporaires pour organiser le flux de données.</p>
                     <p><strong>5. Gestion des Conflits :</strong> Capacité à gérer les conflits d'insertion pour maintenir l'intégrité des données avec des clauses appropriées.</p>
-                    <a href="image base de données.pdf" class="CV bouton-cv" target="_blank">Image</a>
-                    <a href="RAPPORT SAE BASE DE DONNEE.pdf" class="CV bouton-cv" target="_blank">Rapport</a>
-                    <a href="script (1).pdf" class="CV bouton-cv" target="_blank">Script</a>
+                    <a href="Documents/image base de données.pdf" class="CV bouton-cv" target="_blank">Image</a>
+                    <a href="Documents/RAPPORT SAE BASE DE DONNEE.pdf" class="CV bouton-cv" target="_blank">Rapport</a>
+                    <a href="Documents/SCRIPT SQL.pdf" class="CV bouton-cv" target="_blank">Script</a>
 
                     <a href="javascript:void(0)" onclick="togglepopup1()"  class="popupsortir">Fermer</a>
                 </div>
